Get tests working (but not passing yet).