@@ -32,6 +32,12 @@
   </scm>
   <dependencies>
     <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.11</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.jruby.joni</groupId>
       <artifactId>joni</artifactId>
       <version>2.0.0</version>
@@ -175,6 +181,13 @@
       <version>1.0</version>
       <type>jar</type>
     </dependency>
+    <dependency>
+      <groupId>commons-logging</groupId>
+      <artifactId>commons-logging</artifactId>
+      <version>1.1.3</version>
+      <type>jar</type>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <properties>
     <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
@@ -190,10 +203,12 @@
     <tzdata.build.directory>${project.build.directory}/tzdata/build/org/joda/time/tz/data</tzdata.build.directory>
     <Constants.java>org/jruby/runtime/Constants.java</Constants.java>
     <base.java.version>1.6</base.java.version>
+    <jruby.test.memory.permgen>512M</jruby.test.memory.permgen>
   </properties>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <outputDirectory>build/classes/jruby</outputDirectory>
+    <testSourceDirectory>test</testSourceDirectory>
     <defaultGoal>package</defaultGoal>
     <plugins>
       <plugin>
@@ -518,12 +533,36 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.15</version>
+        <configuration>
+          <forkCount>1.5C</forkCount>
+          <reuseForks>true</reuseForks>
+          <testFailureIgnore>true</testFailureIgnore>
+          <argLine>-XX:MaxPermSize=${jruby.test.memory.permgen}</argLine>
+          <excludes>
+            <exclude>org/jruby/javasupport/test/RubyTestCase.java</exclude>
+            <exclude>org/jruby/test/TestRubyBase.java</exclude>
+          </excludes>
+          <properties>
+            <jruby.compat.version>1.8</jruby.compat.version>
+          </properties>
+        </configuration>
+      </plugin>
     </plugins>
     <resources>
       <resource>
         <directory>src</directory>
         <includes>
           <include>**/*rb</include>
+        </includes>
+      </resource>
+      <resource>
+        <directory>src</directory>
+        <includes>
+          <include>META-INF/**/*</include>
         </includes>
       </resource>
       <resource>
